# gitops-feedback-app

./: Jenkinsfile  README.md  deployment.yaml  pyproject.toml  service.yaml
src/gitops_feedback_app/: __init__.py  __main__.py  cli.py  constants.py  crypto.py  ini_file.py  service.py  windows_service.py
